<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lloyds Banking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Menu</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_transfers">Transfers</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_analysis">Analysis</string>
    <string name="title_activity_achievements">House Sharing</string>
    /*Don't change the names of offers and achievements*/
    <string name="title_activity_offers">Branches</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="prefdesc">Display and Navigation</string>
    <string name="preftitle">Settings for use of Mockup</string>
    <string name="title_activity_prefer">Preferences</string>
    <string name="title_activity_change_account_name">Change Account Name</string>

    <string-array name="accountslist">
        <item>Account1</item>
        <item>Account2</item>
        <item>Account3</item>
    </string-array>

    <string name="logout">Logout</string>
    <string name="title_activity_payments">Payments</string>
    <string name="title_activity_statement">Statement</string>
    <string name="action_backHome">Back to menu</string>
    <string name="action_hs_refresh">Click (or swipe down) to refresh</string>
    <string name="action_Notifications">Notifications</string>
    <string name="action_location">Location Service</string>
    <string name="action_back">Go back to home page</string>
    <string name="action_forward">Forward to the bill break down details</string>

    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_legal_maps">LegalMaps</string>
    <string name="title_activity_group_chooser">GroupChooser</string>
    <string name="title_activity_tab_new">TabNew</string>
    <string name="title_activity_tab_exists">TabExists</string>
    <string name="title_activity_payments_tabs">PaymentsTabs</string>
    <string name="title_activity_register_house">RegisterHouse</string>
    <string name="title_activity_houseshare_welcome">Welcome</string>
    <string name="title_activity_houseshare__welcome_1">Welcome To \n House Share Service</string>
    <string name="title_activity_houseshare__welcome_2">Create Bills</string>
    <string name="title_activity_houseshare__welcome_3">Manage Bills</string>
    <string name="title_activity_houseshare__welcome_4">Pay Bills</string>
    <string name="title_activity_houseshare_welcome_start">Start</string>
    <string name="title_activity_houseshare_welcome_skip">Skip</string>
    <string name="title_activity_houseshare_search">Join</string>
    <string name="title_activity_houseshare_search_textIntro">Let\'s join a house</string>
    <string name="houseshare_search_create">Or alternatively, create a house</string>
    <string name="title_activity_houseshare__create__house">Creating a house</string>
    <string name="title_activity_houseshare__create__house_name">Name of house</string>
    <string name="title_activity_houseshare__create__house_hsno">House Number</string>
    <string name="title_activity_houseshare__create__house_street">Street</string>
    <string name="title_activity_houseshare__create__house_city">City</string>
    <string name="title_activity_houseshare__create__house_postcode">Postcode</string>
    <string name="title_activity_houseshare__create__house_description">Description</string>
    <string name="title_activity_fragment__houseshare__inputs">Fragment_Houseshare_Inputs</string>
    <string name="title_activity_houseshare__home_view">Houseshare_HomeView</string>
    <string name="houseshare_search_join_msg">Would you like to join</string>
    <string name="houseshare_search_empty_ini">Your search result will be displayed here.</string>
    <string name="houseshare_search_empty_result">No result :-(</string>
    <string name="houseshare_search_join">Join</string>
    <string name="houseshare_search_cancel">Cancel</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noti_type_join_request_admin_gnr">would like to join your house. </string>
    <string name="noti_type_new_bill_gnr">created a new bill </string>
    <string name="noti_type_join_request_admin_ok">Welcome</string>
    <string name="noti_type_join_request_admin_nope">Cancel</string>
    <string name="noti_empty">You have no notification :-(</string>
    <string name="title_activity_house_share__bill">HouseShare_Bill</string>
    <string name="title_activity_locations_login">LocationsLogin</string>
    <string name="title_search_another_hs">Find another house</string>

    <string name="title_new_bill_dialog">New Bill</string>
    <string name="dialog_new_bill_type_auto">Automatic calculation</string>
    <string name="dialog_new_bill_type_manual">Manual calculation</string>
    <string name="dialog_new_bill_type_auto_description">Let the app do the calculation for you</string>
    <string name="dialog_new_bill_type_manual_description">You got all calculations ready</string>
    <string name="title_activity_new_bill_auto">Automatic bill</string>
    <string name="title_activity_new_bill_manual">Creating a bill</string>

    <string name="title_selecte_users">Select users</string>
    <string name="join_since">Joined since 01/01/1970</string>

    <string name="title_enter_sub_bills">Bill break-down</string>
    <string name="option_shared_equally">This bill is shared equally</string>
    <string name="net_bill">Net total</string>
    <string name="expected_bill">Expected total</string>
    <string name="title_activity_new_bill_manual__sub_bill">Bill break-down</string>

    <string name="bill_not_activated_text">This bill is not activated. Please wait for others\' confirmation</string>

    <!-- This is the password needed for the keystore @see MyHttpClient.java -->
    <string name="store_pass">password</string>
    <string name="title_activity_houseshare__payments">Submitting your payment</string>
    <string name="hint_message">Please leave a message for the bill owner.
        \nYou should include all necessary information needed to identify your payment other than
        the payment method.
   </string>

    <string name="title_activity_houseshare__confirm__payment">Houseshare_Confirm_Payment</string>

    <string name="title_activity_help">HelpActivity</string>
    <string name="action_Help">Help</string>

</resources>
