<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ncl.team5.lloydsmockup.Houseshare_Create_House"
    android:background="@android:color/background_light"
    android:id="@+id/houseshare_create_container"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/hs_inputs_scroll">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/houseshare_create_input_container"
    android:weightSum="1">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/houseshare_create_item_name"
        android:textCursorDrawable="@null"
        android:hint="@string/title_activity_houseshare__create__house_name"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:textColor="@color/text_color"


        ></EditText>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:id="@+id/line1"
        android:layout_below="@+id/houseshare_create_item_name"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/houseshare_create_item_hsno"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:hint="@string/title_activity_houseshare__create__house_hsno"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/text_color"


        ></EditText>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:id="@+id/line2"
        android:layout_below="@+id/houseshare_create_item_hsno"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/houseshare_create_street"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:hint="@string/title_activity_houseshare__create__house_street"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/text_color"
        ></EditText>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/houseshare_create_city"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:hint="@string/title_activity_houseshare__create__house_city"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/text_color"
        ></EditText>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/houseshare_create_postcode"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:hint="@string/title_activity_houseshare__create__house_postcode"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/text_color"
        ></EditText>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/houseshare_create_item_description"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:hint="@string/title_activity_houseshare__create__house_description"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/text_color"
        ></EditText>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="82dp"
    android:id="@+id/hs_create_button_container"
    android:layout_weight="0.24">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/houseshare_create_button"
        android:text="Create"
        style="@style/Button_Light"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:clickable="true"
        android:onClick="Houseshare_create_house"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/darker_gray"
        /> </RelativeLayout>
    </LinearLayout></ScrollView>



</RelativeLayout>
